--- a/package.json
+++ b/package.json
@@ -13,17 +13,18 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "eslint": "^7.21.0",
+    "eslint": "^7.32.0",
     "eslint-config-airbnb-base": "^14.2.1",
-    "eslint-plugin-import": "^2.22.1",
-    "nodemon": "^2.0.7"
+    "eslint-plugin-import": "^2.27.5",
+    "nodemon": "^2.0.22"
   },
   "dependencies": {
-    "@hapi/hapi": "^20.1.0",
+    "@hapi/hapi": "^20.3.0",
+    "@hapi/jwt": "^3.2.0",
     "bcrypt": "^5.1.0",
     "dotenv": "^16.1.4",
     "joi": "^17.9.2",
-    "nanoid": "^3.1.20",
+    "nanoid": "^3.3.6",
     "node-pg-migrate": "^6.2.2",
     "pg": "^8.11.0"
   }
